--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 langchain
 python-dotenv 
 ipykernel
-langchain_community
+langchain-community
 pypdf
 wikipedia
 nltk
 pymupdf
 Arxiv
 langchain-text-splitters
+sentence_transformers
+langchain_huggingface
+faiss-cpu
